<?xml version="1.0"?>
<package format="3">
  <name>gridmap_to_pointcloud_ros</name>
  <version>0.0.0</version>
  <description>The gridmap_to_pointcloud_ros package</description>
  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all-dev</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>map_server</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
